<resources>

    <string name="home_text">首页</string>
    <string name="home_class">分类</string>
    <string name="home_shop">购物车</string>
    <string name="home_user">我的</string>
    <string name="home_EditText">搜索一下</string>
    <string name="MineID">18810589964</string>
    <string name="MineShop">商品：</string>
    <string name="MineDian">店铺：</string>
    <string name="MineFoot">我的足迹</string>
    <string name="AllIndent">全部订单</string>
    <string name="WeiFuKuan">未付款</string>
    <string name="DaiFuKuan">代付款</string>
    <string name="DaiShouHuo">待收货</string>
    <string name="DaiPingJia">待评价</string>
    <string name="TuiHuo">退货/款</string>
    <string name="YuCunKuan">预存款</string>
    <string name="ChongZhi">充值卡</string>
    <string name="DaiJinJuan">代金卷</string>
    <string name="HongBao">红包</string>
    <string name="JiFen">积分</string>
    <string name="ShouHuoDiZhi">收货地址</string>
    <string name="XiTongSheZhi">系统设置</string>
    <string name="LoginUser">手机号/会员名/邮箱</string>
    <string name="LoginPass">新用户注册</string>
    <string name="NewRegister">新用户注册</string>
    <string name="LoginButton">登    录</string>
    <string name="PleaseUsers">请输入用户名</string>
    <string name="PleasePass">请输入密码</string>
    <string name="PleasePassAgain">确认输入密码</string>
    <string name="PleaseEmail">请填写邮箱</string>
    <string name="Register">注    册</string>
    <string name="BackLogin">返回登录界面</string>
    <string name="Activity">热门活动</string>
    <string name="action_settings">Settings</string>

    <string name="app_name">淘宝</string>

    <string name="app_home">首页</string>
    <string name="app_sort">分类</string>
    <string name="app_cart">购物车</string>
    <string name="app_mine">我的</string>

    <string name="user_phone">15726649472</string>
    <string name="user_xin">商品：0</string>
    <string name="user_dianpu">店铺：0</string>
    <string name="user_jiao">我的足迹</string>

    <string name="user_pay">未付款</string>
    <string name="user_drive">待发货</string>
    <string name="user_receipt">待收货</string>
    <string name="user_comment">待评价</string>
    <string name="user_refund">退款/货</string>

    <string name="user_money">预存款</string>
    <string name="user_card">充值卡</string>
    <string name="user_vouchers">代金券</string>
    <string name="user_red">红包</string>
    <string name="user_integral">积分</string>

    <string name="user_address">收货地址</string>
    <string name="user_setting">退出设置</string>

    <string name="user_login">手机号/会员名/邮箱</string>
    <string name="user_password">请输入密码</string>
    <string name="user_denglu">登录</string>
    <string name="user_zhuce">新用户注册</string>

    <string name="user_user">请输入用户名</string>
    <string name="user_pass">请输入密码</string>
    <string name="user_passtwo">输入确认密码</string>
    <string name="user_email">请填写邮箱</string>
    <string name="user_zh">注册</string>

    <string name="user_denglu_btn">登录</string>
    <string name="user_zhuce_btn">注册</string>
</resources>
