<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  >

    <RelativeLayout
        android:id="@+id/logia"
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_login_img" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_below="@id/logia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/LoginUser"/>
        <EditText
            android:layout_below="@id/username"
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/LoginPass"/>
        <TextView
            android:id="@+id/Register"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_below="@id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NewRegister"/>
        <Button
            android:id="@+id/Btn_login"
            android:textSize="20sp"
            android:textColor="@color/colorTopEditText"
            android:background="@drawable/corners"
            android:layout_marginTop="20dp"
            android:layout_below="@id/Register"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_centerHorizontal="true"
            android:text="@string/LoginButton"/>

    </RelativeLayout>


</RelativeLayout>
